--- a/assignment3/hw3.ipynb
+++ b/assignment3/hw3.ipynb
@@ -688,6 +688,434 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q2: Recurrent neural nets for NER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2a**. **i**. The RNN model has $H\\times H$ additional parameters for $W_h$; it has $D\\times H$ parameters for $W_e$ instead of $(2w+1)D\\times H$ for $W$ in the window model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ii**. Assume $D, H \\gg C$, then the computational complexity is $O((D+H)HT)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2b**. **i**. Consider a sentence with words/labels \"The World/MISC War/MISC II/MISC\". If we predicted \"The World/MISC War/O II/MISC\" versus \"The World/O War/O II/O\", the cross entropy loss would decrease because we predicted 2 more tokens' labels correctly. But the entity-level $F_1$ score would decrease since the precision would decrease while the recall would remain the same."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ii**. $F_1$ is not differentiable; it requires predictions from the entire corpus to compute, making it difficult to batch and parallelize."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2c**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_ = [[0.8320184  0.880797  ]\n",
+      " [0.7310586  0.62245935]]\n",
+      "ht_ = [[0.8320184  0.880797  ]\n",
+      " [0.7310586  0.62245935]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:Testing rnn_cell\n",
+      "INFO:Passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "source activate py36\n",
+    "python q2_rnn_cell.py test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2d**. **i**. The loss includes the accuracy of predicting extra 0-labels, which would affect the learning of the parameters. By masking the loss, we eliminate the loss due to the extra 0-labels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ii**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:Testing pad_sequences\n",
+      "INFO:Passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "source activate py36\n",
+    "python q2_rnn.py test1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2e**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/23 [==============================] - 1s - train loss: 0.7945     \n",
+      "23/23 [==============================] - 4s     \n",
+      "\n",
+      "23/23 [==============================] - 0s - train loss: 0.4181     \n",
+      "23/23 [==============================] - 4s     \n",
+      "\n",
+      "23/23 [==============================] - 0s - train loss: 0.3466     \n",
+      "23/23 [==============================] - 4s     \n",
+      "\n",
+      "23/23 [==============================] - 0s - train loss: 0.3095     \n",
+      "23/23 [==============================] - 4s     \n",
+      "\n",
+      "23/23 [==============================] - 0s - train loss: 0.2814     \n",
+      "23/23 [==============================] - 4s     \n",
+      "\n",
+      "23/23 [==============================] - 0s - train loss: 0.2561     \n",
+      "23/23 [==============================] - 4s     \n",
+      "\n",
+      "23/23 [==============================] - 0s - train loss: 0.2342     \n",
+      "23/23 [==============================] - 4s     \n",
+      "\n",
+      "23/23 [==============================] - 0s - train loss: 0.2158     \n",
+      "23/23 [==============================] - 4s     \n",
+      "\n",
+      "23/23 [==============================] - 0s - train loss: 0.1967     \n",
+      "23/23 [==============================] - 4s     \n",
+      "\n",
+      "23/23 [==============================] - 0s - train loss: 0.1815     \n",
+      "23/23 [==============================] - 4s     \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:Testing implementation of RNNModel\n",
+      "INFO:Loading training data...\n",
+      "INFO:Done. Read 721 sentences\n",
+      "INFO:Loading dev data...\n",
+      "INFO:Done. Read 721 sentences\n",
+      "INFO:Built dictionary for 2653 features.\n",
+      "INFO:Initialized embeddings.\n",
+      "INFO:Building model...\n",
+      "/home/weidong/anaconda/envs/py36/lib/python3.6/site-packages/tensorflow/python/ops/gradients_impl.py:100: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n",
+      "INFO:took 2.88 seconds\n",
+      "INFO:Epoch 1 out of 10\n",
+      "INFO:Evaluating on development data\n",
+      "DEBUG:Token-level confusion matrix:\n",
+      "go\\gu  \tPER    \tORG    \tLOC    \tMISC   \tO      \n",
+      "PER    \t378.00 \t14.00  \t115.00 \t0.00   \t317.00 \n",
+      "ORG    \t74.00  \t22.00  \t79.00  \t6.00   \t210.00 \n",
+      "LOC    \t7.00   \t3.00   \t331.00 \t4.00   \t232.00 \n",
+      "MISC   \t19.00  \t5.00   \t19.00  \t23.00  \t192.00 \n",
+      "O      \t39.00  \t12.00  \t90.00  \t0.00   \t6975.00\n",
+      "\n",
+      "DEBUG:Token-level scores:\n",
+      "label\tacc  \tprec \trec  \tf1   \n",
+      "PER  \t0.94 \t0.73 \t0.46 \t0.56 \n",
+      "ORG  \t0.96 \t0.39 \t0.06 \t0.10 \n",
+      "LOC  \t0.94 \t0.52 \t0.57 \t0.55 \n",
+      "MISC \t0.97 \t0.70 \t0.09 \t0.16 \n",
+      "O    \t0.88 \t0.88 \t0.98 \t0.93 \n",
+      "micro\t0.94 \t0.84 \t0.84 \t0.84 \n",
+      "macro\t0.94 \t0.64 \t0.43 \t0.46 \n",
+      "not-O\t0.95 \t0.61 \t0.37 \t0.46 \n",
+      "\n",
+      "INFO:Entity level P/R/F1: 0.38/0.29/0.33\n",
+      "INFO:Epoch 2 out of 10\n",
+      "INFO:Evaluating on development data\n",
+      "DEBUG:Token-level confusion matrix:\n",
+      "go\\gu  \tPER    \tORG    \tLOC    \tMISC   \tO      \n",
+      "PER    \t721.00 \t0.00   \t5.00   \t1.00   \t97.00  \n",
+      "ORG    \t229.00 \t5.00   \t10.00  \t4.00   \t143.00 \n",
+      "LOC    \t110.00 \t1.00   \t338.00 \t4.00   \t124.00 \n",
+      "MISC   \t81.00  \t0.00   \t11.00  \t67.00  \t99.00  \n",
+      "O      \t97.00  \t0.00   \t16.00  \t0.00   \t7003.00\n",
+      "\n",
+      "DEBUG:Token-level scores:\n",
+      "label\tacc  \tprec \trec  \tf1   \n",
+      "PER  \t0.93 \t0.58 \t0.88 \t0.70 \n",
+      "ORG  \t0.96 \t0.83 \t0.01 \t0.03 \n",
+      "LOC  \t0.97 \t0.89 \t0.59 \t0.71 \n",
+      "MISC \t0.98 \t0.88 \t0.26 \t0.40 \n",
+      "O    \t0.94 \t0.94 \t0.98 \t0.96 \n",
+      "micro\t0.95 \t0.89 \t0.89 \t0.89 \n",
+      "macro\t0.95 \t0.82 \t0.54 \t0.56 \n",
+      "not-O\t0.96 \t0.67 \t0.55 \t0.60 \n",
+      "\n",
+      "INFO:Entity level P/R/F1: 0.64/0.51/0.57\n",
+      "INFO:Epoch 3 out of 10\n",
+      "INFO:Evaluating on development data\n",
+      "DEBUG:Token-level confusion matrix:\n",
+      "go\\gu  \tPER    \tORG    \tLOC    \tMISC   \tO      \n",
+      "PER    \t718.00 \t4.00   \t21.00  \t4.00   \t77.00  \n",
+      "ORG    \t167.00 \t41.00  \t37.00  \t13.00  \t133.00 \n",
+      "LOC    \t39.00  \t14.00  \t434.00 \t7.00   \t83.00  \n",
+      "MISC   \t56.00  \t8.00   \t26.00  \t95.00  \t73.00  \n",
+      "O      \t62.00  \t5.00   \t42.00  \t0.00   \t7007.00\n",
+      "\n",
+      "DEBUG:Token-level scores:\n",
+      "label\tacc  \tprec \trec  \tf1   \n",
+      "PER  \t0.95 \t0.69 \t0.87 \t0.77 \n",
+      "ORG  \t0.96 \t0.57 \t0.10 \t0.18 \n",
+      "LOC  \t0.97 \t0.78 \t0.75 \t0.76 \n",
+      "MISC \t0.98 \t0.80 \t0.37 \t0.50 \n",
+      "O    \t0.95 \t0.95 \t0.98 \t0.97 \n",
+      "micro\t0.96 \t0.90 \t0.90 \t0.90 \n",
+      "macro\t0.96 \t0.76 \t0.62 \t0.64 \n",
+      "not-O\t0.97 \t0.72 \t0.63 \t0.67 \n",
+      "\n",
+      "INFO:Entity level P/R/F1: 0.63/0.58/0.60\n",
+      "INFO:Epoch 4 out of 10\n",
+      "INFO:Evaluating on development data\n",
+      "DEBUG:Token-level confusion matrix:\n",
+      "go\\gu  \tPER    \tORG    \tLOC    \tMISC   \tO      \n",
+      "PER    \t719.00 \t4.00   \t18.00  \t3.00   \t80.00  \n",
+      "ORG    \t136.00 \t77.00  \t27.00  \t13.00  \t138.00 \n",
+      "LOC    \t28.00  \t12.00  \t459.00 \t6.00   \t72.00  \n",
+      "MISC   \t38.00  \t17.00  \t17.00  \t105.00 \t81.00  \n",
+      "O      \t52.00  \t7.00   \t12.00  \t0.00   \t7045.00\n",
+      "\n",
+      "DEBUG:Token-level scores:\n",
+      "label\tacc  \tprec \trec  \tf1   \n",
+      "PER  \t0.96 \t0.74 \t0.87 \t0.80 \n",
+      "ORG  \t0.96 \t0.66 \t0.20 \t0.30 \n",
+      "LOC  \t0.98 \t0.86 \t0.80 \t0.83 \n",
+      "MISC \t0.98 \t0.83 \t0.41 \t0.55 \n",
+      "O    \t0.95 \t0.95 \t0.99 \t0.97 \n",
+      "micro\t0.97 \t0.92 \t0.92 \t0.92 \n",
+      "macro\t0.97 \t0.81 \t0.65 \t0.69 \n",
+      "not-O\t0.97 \t0.78 \t0.66 \t0.72 \n",
+      "\n",
+      "INFO:Entity level P/R/F1: 0.67/0.61/0.64\n",
+      "INFO:Epoch 5 out of 10\n",
+      "INFO:Evaluating on development data\n",
+      "DEBUG:Token-level confusion matrix:\n",
+      "go\\gu  \tPER    \tORG    \tLOC    \tMISC   \tO      \n",
+      "PER    \t726.00 \t16.00  \t21.00  \t5.00   \t56.00  \n",
+      "ORG    \t102.00 \t136.00 \t26.00  \t25.00  \t102.00 \n",
+      "LOC    \t18.00  \t26.00  \t471.00 \t22.00  \t40.00  \n",
+      "MISC   \t29.00  \t24.00  \t8.00   \t145.00 \t52.00  \n",
+      "O      \t50.00  \t23.00  \t8.00   \t2.00   \t7033.00\n",
+      "\n",
+      "DEBUG:Token-level scores:\n",
+      "label\tacc  \tprec \trec  \tf1   \n",
+      "PER  \t0.97 \t0.78 \t0.88 \t0.83 \n",
+      "ORG  \t0.96 \t0.60 \t0.35 \t0.44 \n",
+      "LOC  \t0.98 \t0.88 \t0.82 \t0.85 \n",
+      "MISC \t0.98 \t0.73 \t0.56 \t0.63 \n",
+      "O    \t0.96 \t0.97 \t0.99 \t0.98 \n",
+      "micro\t0.97 \t0.93 \t0.93 \t0.93 \n",
+      "macro\t0.97 \t0.79 \t0.72 \t0.75 \n",
+      "not-O\t0.97 \t0.78 \t0.72 \t0.75 \n",
+      "\n",
+      "INFO:Entity level P/R/F1: 0.66/0.66/0.66\n",
+      "INFO:Epoch 6 out of 10\n",
+      "INFO:Evaluating on development data\n",
+      "DEBUG:Token-level confusion matrix:\n",
+      "go\\gu  \tPER    \tORG    \tLOC    \tMISC   \tO      \n",
+      "PER    \t741.00 \t17.00  \t17.00  \t3.00   \t46.00  \n",
+      "ORG    \t91.00  \t167.00 \t23.00  \t18.00  \t92.00  \n",
+      "LOC    \t8.00   \t30.00  \t495.00 \t10.00  \t34.00  \n",
+      "MISC   \t28.00  \t30.00  \t10.00  \t139.00 \t51.00  \n",
+      "O      \t45.00  \t25.00  \t4.00   \t1.00   \t7041.00\n",
+      "\n",
+      "DEBUG:Token-level scores:\n",
+      "label\tacc  \tprec \trec  \tf1   \n",
+      "PER  \t0.97 \t0.81 \t0.90 \t0.85 \n",
+      "ORG  \t0.96 \t0.62 \t0.43 \t0.51 \n",
+      "LOC  \t0.99 \t0.90 \t0.86 \t0.88 \n",
+      "MISC \t0.98 \t0.81 \t0.54 \t0.65 \n",
+      "O    \t0.97 \t0.97 \t0.99 \t0.98 \n",
+      "micro\t0.97 \t0.94 \t0.94 \t0.94 \n",
+      "macro\t0.97 \t0.82 \t0.74 \t0.77 \n",
+      "not-O\t0.98 \t0.81 \t0.75 \t0.78 \n",
+      "\n",
+      "INFO:Entity level P/R/F1: 0.69/0.69/0.69\n",
+      "INFO:Epoch 7 out of 10\n",
+      "INFO:Evaluating on development data\n",
+      "DEBUG:Token-level confusion matrix:\n",
+      "go\\gu  \tPER    \tORG    \tLOC    \tMISC   \tO      \n",
+      "PER    \t739.00 \t22.00  \t14.00  \t4.00   \t45.00  \n",
+      "ORG    \t69.00  \t188.00 \t23.00  \t23.00  \t88.00  \n",
+      "LOC    \t7.00   \t26.00  \t503.00 \t14.00  \t27.00  \n",
+      "MISC   \t22.00  \t24.00  \t9.00   \t158.00 \t45.00  \n",
+      "O      \t31.00  \t31.00  \t4.00   \t4.00   \t7046.00\n",
+      "\n",
+      "DEBUG:Token-level scores:\n",
+      "label\tacc  \tprec \trec  \tf1   \n",
+      "PER  \t0.98 \t0.85 \t0.90 \t0.87 \n",
+      "ORG  \t0.97 \t0.65 \t0.48 \t0.55 \n",
+      "LOC  \t0.99 \t0.91 \t0.87 \t0.89 \n",
+      "MISC \t0.98 \t0.78 \t0.61 \t0.69 \n",
+      "O    \t0.97 \t0.97 \t0.99 \t0.98 \n",
+      "micro\t0.98 \t0.94 \t0.94 \t0.94 \n",
+      "macro\t0.98 \t0.83 \t0.77 \t0.80 \n",
+      "not-O\t0.98 \t0.83 \t0.77 \t0.80 \n",
+      "\n",
+      "INFO:Entity level P/R/F1: 0.70/0.71/0.71\n",
+      "INFO:Epoch 8 out of 10\n",
+      "INFO:Evaluating on development data\n",
+      "DEBUG:Token-level confusion matrix:\n",
+      "go\\gu  \tPER    \tORG    \tLOC    \tMISC   \tO      \n",
+      "PER    \t756.00 \t14.00  \t12.00  \t4.00   \t38.00  \n",
+      "ORG    \t58.00  \t203.00 \t18.00  \t30.00  \t82.00  \n",
+      "LOC    \t5.00   \t25.00  \t503.00 \t17.00  \t27.00  \n",
+      "MISC   \t21.00  \t18.00  \t7.00   \t171.00 \t41.00  \n",
+      "O      \t33.00  \t25.00  \t1.00   \t4.00   \t7053.00\n",
+      "\n",
+      "DEBUG:Token-level scores:\n",
+      "label\tacc  \tprec \trec  \tf1   \n",
+      "PER  \t0.98 \t0.87 \t0.92 \t0.89 \n",
+      "ORG  \t0.97 \t0.71 \t0.52 \t0.60 \n",
+      "LOC  \t0.99 \t0.93 \t0.87 \t0.90 \n",
+      "MISC \t0.98 \t0.76 \t0.66 \t0.71 \n",
+      "O    \t0.97 \t0.97 \t0.99 \t0.98 \n",
+      "micro\t0.98 \t0.95 \t0.95 \t0.95 \n",
+      "macro\t0.98 \t0.85 \t0.79 \t0.82 \n",
+      "not-O\t0.98 \t0.85 \t0.80 \t0.82 \n",
+      "\n",
+      "INFO:Entity level P/R/F1: 0.73/0.74/0.73\n",
+      "INFO:Epoch 9 out of 10\n",
+      "INFO:Evaluating on development data\n",
+      "DEBUG:Token-level confusion matrix:\n",
+      "go\\gu  \tPER    \tORG    \tLOC    \tMISC   \tO      \n",
+      "PER    \t763.00 \t16.00  \t11.00  \t4.00   \t30.00  \n",
+      "ORG    \t51.00  \t231.00 \t21.00  \t19.00  \t69.00  \n",
+      "LOC    \t4.00   \t27.00  \t513.00 \t11.00  \t22.00  \n",
+      "MISC   \t13.00  \t32.00  \t14.00  \t170.00 \t29.00  \n",
+      "O      \t25.00  \t31.00  \t1.00   \t4.00   \t7055.00\n",
+      "\n",
+      "DEBUG:Token-level scores:\n",
+      "label\tacc  \tprec \trec  \tf1   \n",
+      "PER  \t0.98 \t0.89 \t0.93 \t0.91 \n",
+      "ORG  \t0.97 \t0.69 \t0.59 \t0.63 \n",
+      "LOC  \t0.99 \t0.92 \t0.89 \t0.90 \n",
+      "MISC \t0.99 \t0.82 \t0.66 \t0.73 \n",
+      "O    \t0.98 \t0.98 \t0.99 \t0.99 \n",
+      "micro\t0.98 \t0.95 \t0.95 \t0.95 \n",
+      "macro\t0.98 \t0.86 \t0.81 \t0.83 \n",
+      "not-O\t0.98 \t0.86 \t0.82 \t0.84 \n",
+      "\n",
+      "INFO:Entity level P/R/F1: 0.74/0.76/0.75\n",
+      "INFO:Epoch 10 out of 10\n",
+      "INFO:Evaluating on development data\n",
+      "DEBUG:Token-level confusion matrix:\n",
+      "go\\gu  \tPER    \tORG    \tLOC    \tMISC   \tO      \n",
+      "PER    \t761.00 \t16.00  \t10.00  \t4.00   \t33.00  \n",
+      "ORG    \t41.00  \t229.00 \t23.00  \t25.00  \t73.00  \n",
+      "LOC    \t2.00   \t21.00  \t516.00 \t15.00  \t23.00  \n",
+      "MISC   \t11.00  \t20.00  \t13.00  \t180.00 \t34.00  \n",
+      "O      \t10.00  \t21.00  \t1.00   \t4.00   \t7080.00\n",
+      "\n",
+      "DEBUG:Token-level scores:\n",
+      "label\tacc  \tprec \trec  \tf1   \n",
+      "PER  \t0.99 \t0.92 \t0.92 \t0.92 \n",
+      "ORG  \t0.97 \t0.75 \t0.59 \t0.66 \n",
+      "LOC  \t0.99 \t0.92 \t0.89 \t0.91 \n",
+      "MISC \t0.99 \t0.79 \t0.70 \t0.74 \n",
+      "O    \t0.98 \t0.98 \t0.99 \t0.99 \n",
+      "micro\t0.98 \t0.96 \t0.96 \t0.96 \n",
+      "macro\t0.98 \t0.87 \t0.82 \t0.84 \n",
+      "not-O\t0.98 \t0.88 \t0.82 \t0.85 \n",
+      "\n",
+      "INFO:Entity level P/R/F1: 0.77/0.77/0.77\n",
+      "INFO:Model did not crash!\n",
+      "INFO:Passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "source activate py36\n",
+    "python q2_rnn.py test2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -725,7 +1153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
