--- a/assignment3/hw3.ipynb
+++ b/assignment3/hw3.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note**: I adapted the starter codes to make them compatible with python 3. All codes were run in python 3 (rather than the officially supported version of python, i.e., python 2) unless clarified."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Q1: A window into NER"
    ]
   },
@@ -1088,53 +1081,122 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**2f**. (See .results/rnn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2g**. **i**. Limitation 1: The model is unable to see into the future; e.g., \"the Lilac Falls Motel\"; the prediction is ORG PER LOC while the tag should be LOC LOC LOC.\n",
+    "\n",
+    "Limitation 2: The model doesn't enforce consistent tag for adjacent tokens. Example: \"The University of Michigan\"; \"Michigan\" is tagged as LOC, while it should be ORG.\n",
+    "\n",
+    "**ii**. Solution to limitation 1: we could use bidirectional RNN.\n",
+    "\n",
+    "Solution to limitation 2: we could introduce a pairwise agreement in the loss (e.g., use CRF loss)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q3: Grooving with GRUs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3a**. **i**. $b_h \\le 0, W_h + b_h > 0, U_h + b_h > 0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ii**. $U_z > 0, W_z \\le 0, W_h > 0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3b**. (See solution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3c**."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_ = [[ 0.32035077  0.55478156]\n",
+      " [-0.00592549  0.0195577 ]]\n",
+      "ht_ = [[ 0.32035077  0.55478156]\n",
+      " [-0.00592549  0.0195577 ]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:Testing gru_cell\n",
+      "INFO:Passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "source activate py36\n",
+    "python q3_gru_cell.py test"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**3d**.\n",
+    "\n",
+    "![](q3-noclip-rnn.png)\n",
+    "![](q3-clip-rnn.png)\n",
+    "![](q3-noclip-gru.png)\n",
+    "![](q3-clip-gru.png)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**3e**. **i**. The gradients of RNN model vanishes earlier than GRU model. Gradient clipping doesn't have much effect on the RNN model. Gradient clipping helps for the exploding gradients in the GRU model."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**ii**. GRU model does better, while gradient clipping doesn't seem to have much effect on the final loss. GRU helps fix the vanishing gradient problem in the vanilla RNN."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**3f**. (See .results/gru/)"
+   ]
   }
  ],
  "metadata": {
